--- a/public/.htaccess
+++ b/public/.htaccess
@@ -9,6 +9,6 @@ RewriteRule .* index.php [L,QSA]
     Header set Access-Control-Allow-Origin "*"
     Header set Access-Control-Allow-Methods "GET,POST,PUT,DELETE,OPTIONS"
     Header set Access-Control-Allow-Headers "content-type, Authorization"
-    Header set Content-Security-Policy "default-src https:"
+    Header set Content-Security-Policy "default-src http:"
     Header set Access-Control-Expose-Headers "*"
 </IfModule>
