--- a/resources/admin/package.json
+++ b/resources/admin/package.json
@@ -15,11 +15,11 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-navigator": "^3.1.5"
   },
   "dependencies": {
     "@rollup/plugin-alias": "^3.1.9",
-    "sirv-cli": "^2.0.0",
-    "svelte-navigator": "^3.1.5"
+    "sirv-cli": "^2.0.0"
   }
 }
