--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,7 +8,7 @@ RewriteRule .* index.php [L,QSA]
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
     Header set Access-Control-Allow-Methods "GET,POST,PUT,DELETE,OPTIONS"
-    Header set Access-Control-Allow-Headers "content-type, Authorization"
+    Header set Access-Control-Allow-Headers "Content-Type, Authorization, Total"
     Header set Content-Security-Policy "default-src http:"
     Header set Access-Control-Expose-Headers "*"
 </IfModule>
