--- a/resources/admin/package.json
+++ b/resources/admin/package.json
@@ -16,6 +16,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.46.6",
+    "svelte-loading-spinners": "^0.1.7",
     "svelte-navigator": "^3.1.5"
   },
   "dependencies": {
