--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,11 @@
+<IfModule mod_rewrite.c>
 RewriteEngine On
-
+RewriteBase /
+RewriteRule ^index.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule .* index.php [L,QSA]
+RewriteRule . /index.php [L]
+</IfModule>
 
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
