--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,11 +1,9 @@
-<IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /
-RewriteRule ^index.php$ - [L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
-</IfModule>
+RewriteCond %{REQUEST_FILENAME} !-l
+RewriteRule .* index.php [L,QSA]
 
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
